Fix wrapping for already sent friend req button

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -194,9 +194,6 @@
     .cp-app-profile-friend-request.btn-success {
         margin-right: 0.5rem;
     }
-    .cp-app-profile-friend-request b {
-        margin-right: 0.3rem;
-    }
 
     // I tried using flexbox but messed with how the pencil icon was displayed
     #cp-app-profile-invite-button {
